--- a/src/app/components/pokemon-detail/pokemon-detail.component.sass
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.sass
@@ -27,4 +27,10 @@
 .sheet__item_label
     margin-right: 20px
     font-weight: bold
-    
+
+app-progress-bar 
+    color: white
+
+.name 
+    text-align: center
+    color: white
