--- a/src/app/components/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.html
@@ -1,15 +1,18 @@
+<div class="card {{'bg-color-'+ getPrincipalType(pokemon.types)}}">
+<h1 class="name">{{pokemon.name}}</h1>
+</div>
 <div class="sheet__img">
-    <img *ngIf="classicMode" [src]="pokemon.sprites?.front_default" [alt]="pokemon.name">
+    <img *ngIf="classicMode" [src]="pokemon.sprites.front_default" [alt]="pokemon.name">
     <img *ngIf="!classicMode" src="https://projectpokemon.org/images/normal-sprite/{{pokemon.name}}.gif" [alt]="pokemon.name">
 </div>
 
 <mat-tab-group class="sheet">
-    <mat-tab label="About">
+    <mat-tab label="Info">
         <div class="sheet__tab">
             <div class="sheet__item">
-                <div class="color-gray sheet__item_label">Height: </div>
-                <div class="color-gray sheet__item_label">Weight: </div>
-                <div class="color-gray sheet__item_label">Abilities: </div>
+                <div class="color-black sheet__item_label">Altura: </div>
+                <div class="color-black sheet__item_label">Peso: </div>
+                <div class="color-black sheet__item_label">Movimientos: </div>
             </div>
             <div class="sheet__item">
                 <div>{{pokemon.height}}</div>
@@ -19,46 +22,46 @@
         </div>
     </mat-tab>
 
-    <mat-tab label="Base Stats">
+    <mat-tab label="Stats Base">
         <div class="sheet__tab">
             <div class="sheet__item w-100">
                 <div class="sheet__progress w-100">
-                    <div class="w-20 color-gray sheet__item_label">HP:</div>
+                    <div class="w-20 color-black sheet__item_label">PS:</div>
                     <div class="w-80">
                         <app-progress-bar [color]="getPrincipalType(pokemon.types)" [value]="pokemon.stats[5].base_stat"></app-progress-bar>
                     </div>
                 </div>
 
                 <div class="sheet__progress w-100">
-                    <div class="w-20 color-gray sheet__item_label">Attack: </div>
+                    <div class="w-20 color-black sheet__item_label">Ataque: </div>
                     <div class="w-80">
                         <app-progress-bar [color]="getPrincipalType(pokemon.types)" [value]="pokemon.stats[4].base_stat"></app-progress-bar>
                     </div>
                 </div>
 
                 <div class="sheet__progress w-100">
-                    <div class="w-20 color-gray sheet__item_label">Defense:</div>
+                    <div class="w-20 color-black sheet__item_label">Defensa:</div>
                     <div class="w-80">
                         <app-progress-bar [color]="getPrincipalType(pokemon.types)" [value]="pokemon.stats[3].base_stat"></app-progress-bar>
                     </div>
                 </div>
 
                 <div class="sheet__progress w-100">
-                    <div class="w-20 color-gray sheet__item_label">Sp. Attack:</div>
+                    <div class="w-20 color-black sheet__item_label">Sp.Ataque:</div>
                     <div class="w-80">
                         <app-progress-bar [color]="getPrincipalType(pokemon.types)" [value]="pokemon.stats[2].base_stat"></app-progress-bar>
                     </div>
                 </div>
 
                 <div class="sheet__progress w-100">
-                    <div class="w-20 color-gray sheet__item_label">Sp. Defense:</div>
+                    <div class="w-20 color-black sheet__item_label">Sp.Defensa:</div>
                     <div class="w-80">
                         <app-progress-bar [color]="getPrincipalType(pokemon.types)" [value]="pokemon.stats[1].base_stat"></app-progress-bar>
                     </div>
                 </div>
 
                 <div class="sheet__progress w-100">
-                    <div class="w-20 color-gray sheet__item_label">Speed:</div>
+                    <div class="w-20 color-black sheet__item_label">Velocidad:</div>
                     <div class="w-80">
                         <app-progress-bar [color]="getPrincipalType(pokemon.types)" [value]="pokemon.stats[0].base_stat"></app-progress-bar>
                     </div>
