crear routing module y auth component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="logo">
     <img src="../assets/images/Pokémon_logo.svg.png" alt="">
 </div>
-<app-pokemon-list></app-pokemon-list>
+<router-outlet></router-outlet>
