--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,6 +1,18 @@
-<p>login works!</p>
-<button 
-  [routerLink]="['about']" 
-  routerLinkActive="router-link-active">
-  Ir a Acerca de
-</button>
+<div class="body">
+    <div class="login">
+        <form [formGroup]="myForm" (ngSubmit)="onLogin()">
+            <br><br><br><br>
+            <h1>Iniciar Sesion</h1>
+            <mat-form-field class="ancho" appearance="fill">
+                <mat-label for="email">Email</mat-label>
+                <input type="email" matInput autocomplete="off" formControlName="email">
+            </mat-form-field>
+            <mat-form-field class="ancho" appearance="fill">
+                <mat-label for="password">Contraseña</mat-label>
+                <input type="password" matInput autocomplete="off" formControlName="password">
+            </mat-form-field>
+            <br>
+            <button type="submit" class="ancho" mat-raised-button color="primary" [disabled]="myForm.invalid">Iniciar Sesion</button>
+        </form>
+    </div>
+</div>
